[package]
name = "tagcm"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
cli-clipboard = "0.4.0"
crossterm = "0.27.0"
directories = "5.0.1"
ratatui = "0.26.3"
serde_json = "1.0.117"
